--- a/python.html
+++ b/python.html
@@ -55,36 +55,36 @@
   </section>
   <section id="variables-data-types">
     <h3>Variables and Data Types</h3>
-    <!--TODO Content for Variables and Data Types section -->
+    <!--TODO mf2  Content for Variables and Data Types section -->
   </section>
   <section id="operators-expressions">
     <h3>Operators and Expressions</h3>
-    <!--TODO Content for Operators and Expressions section -->
+    <!--TODO mf2  Content for Operators and Expressions section -->
   </section>
 
   <section id="control-flow">
     <h3>Control Flow</h3>
-    <!--TODO Content for Control Flow section -->
+    <!--TODO mf2  Content for Control Flow section -->
   </section>
 
   <section id="functions">
     <h3>Functions</h3>
-    <!--TODO Content for Functions section -->
+    <!--TODO mf2  Content for Functions section -->
   </section>
 
   <section id="data-structures">
     <h3>Data Structures</h3>
-    <!--TODO Content for Data Structures section -->
+    <!--TODO  mf2 Content for Data Structures section -->
   </section>
 
   <section id="file-handling">
     <h3>File Handling</h3>
-    <!--TODO Content for File Handling section -->
+    <!--TODO  mf2 Content for File Handling section -->
   </section>
 
   <section id="error-handling">
     <h3>Error Handling</h3>
-    <!--TODO Content for Error Handling section -->
+    <!--TODO  mf2 Content for Error Handling section -->
   </section>
   </main>
 <div>
