--- a/admin.html
+++ b/admin.html
@@ -14,7 +14,12 @@
   <a class="nav "
      href="login.html">Log in<i class="yellow"></i></a> |
   <a class="nav "
-     href="profile&progress.html">Profile and Progress <i class="yellow"></i></a>
+     href="profile.html">Profile<i class="yellow"></i></a>
+<a class="nav "
+     href="progress.html">Progress <i class="yellow"></i></a>
+
+
+
   <a class="nav "
      href="feedback.html">Feedback <i class="yellow"></i></a>
   <a class="nav current_page"
@@ -30,7 +35,7 @@
   <a class="nav " href="python.html">PYTHON</a>
 </nav>
 <main>
-  <form action="" class="white background-form margin-30-px" method="post"><!--admin.html-->
+  <form action="#" class="white background-form margin-30-px" method="post"><!--admin.html-->
     <fieldset>
       <legend>Enter the super confidential secret admin password</legend>
       <label for="admin_password">Admin password:</label>
