--- a/php.html
+++ b/php.html
@@ -14,7 +14,10 @@
   <a class="nav "
      href="login.html">Log in<i class="yellow"></i></a> |
   <a class="nav "
-     href="profile&progress.html">Profile and Progress <i class="yellow"></i></a>
+     href="profile.html">Profile<i class="yellow"></i></a>
+<a class="nav "
+     href="progress.html">Progress <i class="yellow"></i></a>
+
   <a class="nav "
      href="feedback.html">Feedback <i class="yellow"></i></a>
   <a class="nav "
@@ -87,7 +90,7 @@
       $num = 10;
       if ($num > 0) {
       echo "Positive number";
-      } elseif ($num < 0) {
+      } elseif ($num &lt; 0) {
       echo "Negative number";
       } else {
       echo "Zero";
@@ -98,7 +101,7 @@
     <h4>Output:</h4>
     <div class="output">
     <pre class="left-align">
-      &lt;p&gt;Positive number&lt;/p&gt;
+      Positive number
     </pre>
     </div>
   </section>
@@ -117,11 +120,11 @@
     <h4>Output:</h4>
     <div class="output">
     <pre class="left-align">
-      &lt;p&gt;1&lt;/p&gt;
-      &lt;p&gt;2&lt;/p&gt;
-      &lt;p&gt;3&lt;/p&gt;
-      &lt;p&gt;4&lt;/p&gt;
-      &lt;p&gt;5&lt;/p&gt;
+      1
+      2
+      3
+      4
+      5
     </pre>
     </div>
   </section>
