--- a/profile.html
+++ b/profile.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title> TryHard - Profile and Progress</title>
+  <title> TryHard - Profile</title>
   <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
@@ -15,7 +15,10 @@
   <a class="nav "
      href="login.html">Log in<i class="yellow"></i></a> |
   <a class="nav current_page"
-     href="profile&progress.html">Profile and Progress <i class="yellow"></i></a>
+     href="profile.html">Profile<i class="yellow"></i></a>
+<a class="nav "
+     href="progress.html">Progress <i class="yellow"></i></a>
+
   <a class="nav "
      href="feedback.html">Feedback <i class="yellow"></i></a>
   <a class="nav "
@@ -65,40 +68,6 @@
         <label class="custom-checkbox"><input name="interests" type="checkbox" value="python"><span class="checkmark"></span>Python Programming</label>
         <label for="submit"><input id="submit" type="submit" value="Save"></label>
       </form>
-    </div>
-  </section>
-
-  <section class="progress-tracker">
-    <h2>Your progress in lessons:</h2>
-    <div class="progress-item">
-      <div class="progress-label">HTML</div>
-      <div class="progress-bar">
-        <div class="progress-bar-inner bar--higher"></div>
-      </div>
-    </div>
-    <div class="progress-item">
-      <div class="progress-label">CSS</div>
-      <div class="progress-bar">
-        <div class="progress-bar-inner bar--high"></div>
-      </div>
-    </div>
-    <div class="progress-item">
-      <div class="progress-label">JavaScript</div>
-      <div class="progress-bar">
-        <div class="progress-bar-inner  bar--medium"></div>
-      </div>
-    </div>
-    <div class="progress-item">
-      <div class="progress-label">PHP</div>
-      <div class="progress-bar">
-        <div class="progress-bar-inner bar--low"></div>
-      </div>
-    </div>
-    <div class="progress-item">
-      <div class="progress-label">Python</div>
-      <div class="progress-bar">
-        <div class="progress-bar-inner bar--lower"></div>
-      </div>
     </div>
   </section>
 </main>
