--- a/progress.html
+++ b/progress.html
@@ -1,24 +1,22 @@
 <!DOCTYPE html>
-<html lang="hu">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title> TryHard - Home Page</title>
+  <title> TryHard - Progress</title>
   <link href="css/style.css" rel="stylesheet">
 </head>
-
-
 <body>
 <nav>
-  <a class="nav current_page"
+  <a class="nav "
      href="index.html">Home<i class="yellow"></i></a> |
   <a class="nav "
      href="signup.html">Sign up<i class="yellow"></i></a> |
   <a class="nav "
      href="login.html">Log in<i class="yellow"></i></a> |
-  <a class="nav "
+  <a class="nav"
      href="profile.html">Profile<i class="yellow"></i></a>
-<a class="nav "
+  <a class="nav current_page"
      href="progress.html">Progress <i class="yellow"></i></a>
 
   <a class="nav "
@@ -27,8 +25,6 @@
      href="admin.html">Admin <i class="yellow"></i></a>
 
 </nav>
-
-
 <nav>
   <h1 class="choose-a-lesson-to-learn">Choose a lesson to learn:</h1>
   <a class="nav " href="html.html">HTML</a>
@@ -37,25 +33,55 @@
   <a class="nav " href="php.html">PHP</a>
   <a class="nav " href="python.html">PYTHON</a>
 </nav>
-
-
 <header>
-  <h1>Welcome to TryHard33</h1>
+
+  <h1 class="signup-and-login-caption">Progress</h1>
+  <div>
+    It seems like you're not logged in.
+    <br>
+    <br>
+    <a href="signup.html">Click here to sign up if you don't have an account yet</a>
+    <br>
+    <br>
+    <a href="login.html">Click here to log in if you already have an account</a>
+  </div>
 </header>
-
-
 <main>
-  <img alt="image of a person learning html js and php" src="img/person_learns_programming.jpg" class="seventy-five-percent-width">
-  <section class="white seventy-five-percent-width">
-    <!-- main content goes here -->
-    <h2>Welcome to the TryHard33 website</h2>
-    <p>An interactive website where you can learn HTML, CSS, Javascript, PHP and Python</p>
-    <a class="btn margin-bottom" href="html.html">Study
-      our free HTML Tutorial &#187;</a><br>
+
+  <section class="progress-tracker">
+    <h2>Your progress in lessons:</h2>
+    <div class="progress-item">
+      <div class="progress-label">HTML</div>
+      <div class="progress-bar">
+        <div class="progress-bar-inner bar--higher"></div>
+      </div>
+    </div>
+    <div class="progress-item">
+      <div class="progress-label">CSS</div>
+      <div class="progress-bar">
+        <div class="progress-bar-inner bar--high"></div>
+      </div>
+    </div>
+    <div class="progress-item">
+      <div class="progress-label">JavaScript</div>
+      <div class="progress-bar">
+        <div class="progress-bar-inner  bar--medium"></div>
+      </div>
+    </div>
+    <div class="progress-item">
+      <div class="progress-label">PHP</div>
+      <div class="progress-bar">
+        <div class="progress-bar-inner bar--low"></div>
+      </div>
+    </div>
+    <div class="progress-item">
+      <div class="progress-label">Python</div>
+      <div class="progress-bar">
+        <div class="progress-bar-inner bar--lower"></div>
+      </div>
+    </div>
   </section>
 </main>
-
-
 <footer>
   <section>
     <h2>Contact us:</h2>
@@ -69,3 +95,4 @@
   </section>
 </footer>
 </body>
+</html>
