--- a/python.html
+++ b/python.html
@@ -15,7 +15,10 @@
   <a class="nav "
      href="login.html">Log in<i class="yellow"></i></a> |
   <a class="nav "
-     href="profile&progress.html">Profile and Progress <i class="yellow"></i></a>
+     href="profile.html">Profile<i class="yellow"></i></a>
+<a class="nav "
+     href="progress.html">Progress <i class="yellow"></i></a>
+
   <a class="nav "
      href="feedback.html">Feedback <i class="yellow"></i></a>
   <a class="nav "
@@ -32,7 +35,7 @@
 </nav>
 <header class="yellow-font gray-background">
   <h1>Python tutorial</h1>
-  <section class="html-css-nav">
+  <div class="html-css-nav">
     <ul class="left black-font">
       <li><a href="#variables-data-types">Variables and Data Types</a></li>
       <li><a href="#operators-expressions">Operators and Expressions</a></li>
@@ -42,7 +45,7 @@
       <li><a href="#file-handling">File Handling</a></li>
       <li><a href="#error-handling">Error Handling</a></li>
     </ul>
-  </section>
+  </div>
 </header>
 <main class="lesson-container white left-align">
   <section>
@@ -91,7 +94,7 @@
   <a class="left btn" href="index.html">&#10094;&#10094; Home</a>
   <br>
   <a class="left btn" href="php.html">&#10094; Previous</a>
-  <a class="right btn" href="python.html" aria-disabled="true">Next &#10095;</a>
+  <a class="right btn" href="python.html">Next &#10095;</a>
 </div>
 <footer>
   <section>
