--- a/css.html
+++ b/css.html
@@ -14,7 +14,10 @@
   <a class="nav "
      href="login.html">Log in<i class="yellow"></i></a> |
   <a class="nav "
-     href="profile&progress.html">Profile and Progress <i class="yellow"></i></a>
+     href="profile.html">Profile<i class="yellow"></i></a>
+<a class="nav "
+     href="progress.html">Progress <i class="yellow"></i></a>
+
   <a class="nav "
      href="feedback.html">Feedback <i class="yellow"></i></a>
   <a class="nav "
@@ -31,14 +34,14 @@
 </nav>
 <header class="yellow-font gray-background">
   <h1>CSS Tutorial</h1>
-  <section class="html-css-nav">
+  <div class="html-css-nav">
     <ul class="left">
       <li><a href="#introduction">Introduction to CSS</a></li>
       <li><a href="#examples">Interactive Examples</a></li>
       <li><a href="#challenges">Challenges</a></li>
       <li><a href="#resources">Resources</a></li>
     </ul>
-  </section>
+  </div>
 </header>
 <main class="lesson-container white left-align">
   <h2>CSS tutorial</h2>
