--- a/html.html
+++ b/html.html
@@ -14,7 +14,10 @@
   <a class="nav "
      href="login.html">Log in<i class="yellow"></i></a> |
   <a class="nav "
-     href="profile&progress.html">Profile and Progress <i class="yellow"></i></a>
+     href="profile.html">Profile<i class="yellow"></i></a>
+<a class="nav "
+     href="progress.html">Progress <i class="yellow"></i></a>
+
   <a class="nav "
      href="feedback.html">Feedback <i class="yellow"></i></a>
   <a class="nav "
@@ -43,7 +46,7 @@
 </header>
 <main class="lesson-container white left-align">
   <h2>HTML tutorial</h2>
-  <section id="introduction">
+  <div id="introduction">
     <div class="html-intro">
       <hr>
       <h2 class="darkcyan">Introduction to HTML</h2>
@@ -70,7 +73,7 @@
         <li>And much more!</li>
       </ul>
     </div>
-  </section>
+  </div>
 
   <section class="html-intro" id="basics">
     <hr>
