--- a/signup.html
+++ b/signup.html
@@ -14,7 +14,10 @@
   <a class="nav "
      href="login.html">Log in<i class="yellow"></i></a> |
   <a class="nav "
-     href="profile&progress.html">Profile and Progress <i class="yellow"></i></a>
+     href="profile.html">Profile<i class="yellow"></i></a>
+<a class="nav "
+     href="progress.html">Progress <i class="yellow"></i></a>
+
   <a class="nav "
      href="feedback.html">Feedback <i class="yellow"></i></a>
   <a class="nav "
@@ -55,7 +58,7 @@
       </label>
       <br>
       <label for="birthdate">Birth date
-        <input id="birthdate" name="birthdate" placeholder="birthdate" required type="date">
+        <input id="birthdate" name="birthdate" required type="date">
       </label>
       <br>
       <label for="password">Password
