--- a/html.html
+++ b/html.html
@@ -200,7 +200,7 @@
         <h4>Examples:</h4>
         <div class="reset-this-root">
           <div class="show">
-            <h1 style="font-size: xx-large">This is what a h1 heading looks like</h1>
+            <h1 class="h1-demo">This is what a h1 heading looks like</h1>
             <h2>This is what a h2 heading looks like</h2>
             <h3>This is what a h3 heading looks like</h3>
             <h4>This is what a h4 heading looks like</h4>
