--- a/javascript.html
+++ b/javascript.html
@@ -92,7 +92,7 @@ var y = null; // Assigning a null value to a variable
     </code></pre>
   </section>
 
-  <section class="lesson-content white" id="operators">
+  <div class="lesson-content white" id="operators">
     <article>
     <h2>Operators and Expressions</h2>
       <p>In JavaScript, operators are symbols that perform operations on operands. They can be classified into different
@@ -114,9 +114,9 @@ var y = 20;
 var z = x + y; // z is assigned the value 30
         </code></pre>
     </article>
-  </section>
+  </div>
 
-  <section class="lesson-content white" id="control-flow">
+  <div class="lesson-content white" id="control-flow">
     <article>
     <h2>Control Flow</h2>
       <p>Control flow refers to the order in which statements are executed in a program. JavaScript provides several
@@ -139,9 +139,9 @@ var z = x + y; // z is assigned the value 30
         <li>continue statement: Jumps to the next iteration of a loop.</li>
       </ul>
     </article>
-  </section>
+  </div>
 
-  <section class="lesson-content white" id="functions">
+  <div class="lesson-content white" id="functions">
     <article>
     <h2>Functions</h2>
       <p>A function is a block of reusable code that performs a specific task. Functions allow you to organize your code
@@ -157,9 +157,9 @@ function functionName(parameters) {
       <p>Functions can take parameters (input values) and return a value as output. They can also be assigned to
         variables, passed as arguments to other functions, and returned from other functions.</p>
     </article>
-  </section>
+  </div>
 
-  <section class="lesson-content white" id="objects-arrays">
+  <div class="lesson-content white" id="objects-arrays">
     <article>
     <h2>Objects and Arrays</h2>
       <p>Objects and arrays are two fundamental data structures in JavaScript:</p>
@@ -172,9 +172,9 @@ function functionName(parameters) {
         associated with an index starting from 0. Arrays are used to store lists of data, such as a list of numbers or a
         list of objects.</p>
     </article>
-  </section>
+  </div>
 
-  <section class="lesson-content white" id="dom-manipulation">
+  <div class="lesson-content white" id="dom-manipulation">
     <article>
     <h2>DOM Manipulation</h2>
       <p>The Document Object Model (DOM) is a programming interface for web documents. It represents the structure of
@@ -183,9 +183,9 @@ function functionName(parameters) {
         the content, structure, and style of web pages. JavaScript provides methods and properties for accessing,
         creating, modifying, and deleting elements in the DOM.</p>
     </article>
-  </section>
+  </div>
 
-  <section class="lesson-content white" id="event-handling">
+  <div class="lesson-content white" id="event-handling">
     <article>
     <h2>Event Handling</h2>
       <p>Event handling is the process of responding to user interactions with a web page, such as clicks, mouse
@@ -195,7 +195,7 @@ function functionName(parameters) {
         handling events, you can create interactive and dynamic web applications that respond to user actions in
         real-time.</p>
     </article>
-  </section>
+  </div>
 </main>
 <div>
   <a class="left btn" href="index.html">&#10094;&#10094; Home</a>
