--- a/php.html
+++ b/php.html
@@ -34,7 +34,7 @@
 </nav>
 <main class="lesson-container white left-align">
   <h2>PHP tutorial</h2>
-  <article class="lesson-content">
+  <div class="lesson-content">
     <section class="lesson-content">
     <h2>PHP Basics</h2>
       <h3>Introduction</h3>
@@ -128,7 +128,7 @@
     </pre>
     </div>
   </section>
-  </article>
+  </div>
 </main>
 <div>
   <a class="left btn" href="index.html">&#10094;&#10094; Home</a>
